# smig_trader

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  sample.env  setup.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 34522ffd50ef_removed_unique_contraint_from_timestamp_.py  5d4983111e81_initial_revision.py  cad6549541ad_created_table_just_for_stock_symbol_.py  da0b1e3119cb_changed_table_name_for_stock_.py
data/: data.pkl
smig_trader/: backtesting.ipynb  common.py  database.py  getting_started.ipynb  models.py  settings.py  trader.py
smig_trader/.ipynb_checkpoints/: getting_started-checkpoint.ipynb
tests/: test_trader.py
